# celery

./: .env  .replit  pyproject.toml
email_campaign_system/: .env  .env.example  celery_worker.sh  celerybeat-schedule  dump.rdb  manage.py  runserver.sh  test_email.py
email_campaign_system/campaigns/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
email_campaign_system/campaigns/migrations/: 0001_initial.py  __init__.py
email_campaign_system/campaigns/templates/campaigns/: analytics.html  base.html  campaign_create.html  campaign_detail.html  campaign_edit.html  campaign_list.html  dashboard.html  login.html  logs.html  recipient_list.html  recipient_list_detail.html  recipient_upload.html
email_campaign_system/email_campaign_system/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
email_campaign_system/static/css/: style.css
email_campaign_system/static/js/: charts.js
